--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: '.'
+          path: https://github.com/shrish-shete20/Website/blob/main/me.html
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
